# huginn-latent-dynamics

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: custom.jsonl
scripts/: loop_recurrence.py
src/huginn_research/: __init__.py  __main__.py  answers.py  cli.py  datasets.py  metrics.py  model.py  plotting.py  selectors.py  storage.py  trajectories.py
tests/: test_answers.py  test_cli.py  test_metrics.py  test_selectors.py  test_storage.py  test_trajectories.py
