[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "huginn-research"
version = "0.1.0"
description = "Minimal CLI research tools for running and analyzing tomg-group-umd/huginn-0125"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
]

[project.scripts]
huginn-research = "huginn_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
